<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, DiscoverMobileActivity!</string>
    <string name="app_name">Discover</string>
    <string name="discover_url_to_enroll_strong">https://www.discovercard.com/cardmembersvcs/loginlogout/app/ac_main?ICMPGN=MBL_WEB_LP_FTR_FULL_SITE_TXT</string>
    
	<string-array name="allowed_prefixes">
	    <item>https://www.discovercard.com/cardmembersvcs/mobile/app/</item>
	    <item>https://www.discovercard.com/mobile-adv</item>
	    <item>https://www.discoverbank.com/m</item>
		<item>https://m.discovercard.com</item>
		<item>http://www.youtube.com</item>
		<item>http://s.ytimg.com</item>
		<item>http://i1.ytimg.com</item>
		<item>https://ajax.google.com</item>
		<item>https://smetrics.discover.com</item>
		<item>http://sandbox.objectwave.com</item>
	</string-array>

	<!-- Camera MDC Start -->
	
	<!-- Define URL's -->
    
    <string name="MAIN_URL">intro-terms</string>
    <string name="CONFIRM_AUTHORIZE_PAGE">confirm-authorize</string>
    <string name="ENTER_AMOUNT_PAGE">enter-amount</string>
    <string name="SELECT_ACCOUNT_PAGE">select-account</string>
   	
   	
	<!-- Define capture mode: false = Camera mode , true = Mock gallery mode -->
	
   	<string name="TEST_MODE">false</string>
    
    
	<!-- Custom camera phonegap plugin actions -->
	
    <string name="CAPTURE_CHECK_FRONT">captureCheckFront</string>
    <string name="CAPTURE_CHECK_BACK">captureCheckBack</string>
    <string name="CAPTURE_CHECK">captureCheck</string>
    <string name="REMOVE_CHECK_IMAGES">removeCheckImages</string>
    <string name="CHECK_REVIEW_FRONT">checkReviewFront</string>
    <string name="CHECK_REVIEW_BACK">checkReviewBack</string>
    <string name="FRONT_CHK_ELEMENT_ID">frontCheck</string>
    <string name="BACK_CHK_ELEMENT_ID">backCheck</string>
    <string name="BACK_CONFIRM_AUTHORIZE">backConfirmAuthorize</string>
    <string name="INJECT_CHECKS_CAPTURES">injectChecksCaptures</string>
    
    
	<!-- Temporary file names of the checks captures-->
	
    <string name="FRONT_CHECK_FILENAME">FRONT_CHK</string>
    <string name="BACK_CHECK_FILENAME">BACK_CHK</string>
    
    
    <!-- Labels and Messages -->
    
    <string name="main">Custom Camera Layout</string>
    <string name="info">info</string>
    <string name="help">help</string>
    <string name="capture">Take Picture</string>
    <string name="titlefrontcheck">FRONT OF CHECK</string>
    <string name="titlebackcheck">BACK OF CHECK</string>
    <string name="messagefrontcheck">\n\n      Position image within four\n      corners, then press Capture.</string>
    <string name="titlehelpfrontcheck">Auto Capture and Review Help</string>
    <string name="messagehelpfrontcheck">* Place the check on a plain, dark, flat surface.\n* Stand over the check.\n* Position the check on the screen within the orange box.\n* Hold the camera steady during the countdown and wait for the phone\'s camera to auto-capture the check image.\n\nWhen reviewing the image:\n* Ensure the check is in focus.\n* Ensure the back is endorsed.\n* Ensure all areas of the check are visible</string>
    <string name="messagebackcheck">\n\n      Position image within four\n      corners, then press Capture.</string>
    <string name="messagehelpbackcheck">* Place the check on a plain, dark, flat surface.\n* Stand over the check.\n* Position the check on the screen within the orange box.\n* Hold the camera steady during the countdown and wait for the phone\'s camera to auto-capture the check image.\n\nWhen reviewing the image:\n* Ensure the check is in focus\n* Ensure the back is endorsed\n* Ensure all areas of the check are visible</string>
    <string name="titleCounter">3</string>
    <string name="messageCounter">Hold steady...</string>
    <string name="emptyString"></string>
    <string name="encodeBase64Error">Please retake: [Picture encoding failed]</string>
    <string name="titleCancelModal">Are you sure you want to\ncancel this deposit?</string>
    <string name="messageCancelModal">All information entered for this transaction will\nbe lost.</string>
    
    <!-- Statements -->
    <string name="statement_btn_download_text">Download</string>
    <string name="discoverLogo_img_desc">Discover Logo</string>
    <string name="statement_btn_next_desc">Next</string>
    <string name="statement_btn_prev_desc">Previous</string>
    <string name="statement_invalidData_message">Sorry there was an error trying to display your selected statement.</string>     
    <string name="common_sessionExpired_message">As a security measure, we ended your session after extended inactivity. This helps protect your personal Discover card account information. When you are ready to access your account information, simply log in again.</string>
    <string name="common_noInternetConnection_message">The Internet connection appears to be offline at this moment. In order to access the features of the application, you will need Internet connectivity. Please check your device settings and try again once the connection has been restored.</string>
        
    <!-- Preferences file-->
    <string name="PREFERENCES_FILE_NAME">RDCCameraPrefsFile</string>
    <string name="PREFERENCES_KEY_RELEASE_ALL_CAMERA_RESOURCES">releaseAllCameraResources</string>
    
    <!-- Camera MSC End -->
    
    <!-- Fastcheck  Viewing Prior to Login -->
    <string name ="back_button_text">Back</string>
	<string name="fast_check_token_key_in_ps">FastcheckToken1.0</string>
	<string name="fast_check_error_tech_diff">We\'re currently experiencing technical difficulties. We apologize for any incovenience.</string>
	<string name="fast_check_error_cannot_access">Due to specific conditions related to your account, this page is currently unavailable.&lt;br/&gt;&lt;br/&gt;Please contact Customer Service at &lt;a href=\"tel://18003472683\"&gt;1&#8211;800&#8211;347&#8211;2683&lt;/a&gt; for assistance.</string>
	<string name="fast_check_error_no_token">You recently requested to disable your quick view settings. If you\'d like to enable this option, please log in and navigate to
						\"Quick View\" under Profile and Settings.</string>
	<string name="fast_check_rewards_outage_msg">Rewards Balance cannot be updated at this time.</string>
	<string name="fast_check_salutation_good_morning">Good morning,</string>
	<string name="fast_check_salutation_good_afternoon">Good afternoon,</string>
	<string name="fast_check_salutation_good_evening">Good evening,</string>
	<string name="fast_check_spinner_msg_part1">Discover</string>
	<string name="fast_check_spinner_msg_part2">Retrieving Quick view&#8230;</string>
	<string name="fast_check_error_img_desc">error</string>
	<string name="fast_check_detail_databean">FastcheckDetailDataBean</string>
	<string name="fast_check_maintenance_msg">FastcheckMaintenanceMsg</string>
	<string name="fast_check_last_retrieval_time_in_ms">FastcheckLastRetrievalTimeInMS</string>
	<string name="fast_check_credit_line_available">Credit Line Available</string>
	<string name="fast_check_cashback_bonus">&lt;i&gt;Cashback Bonus&lt;/i&gt; Balance</string>
	<string name="fast_check_cardArt_name">card_art_name</string>
	<string name="fast_check_cardArt_bitmap">card_art_bitmap</string>
	
	 <!-- CARD TYPE FOR TOOL TIP MENU -->
    <string name="card_type_more">More Card </string>
    <string name="card_type_open_road">Open Road Card </string>
    <string name="card_type_motiva">Motiva Card </string>
    <string name="card_type_discover_it">Discover IT Card </string>
    <string name="card_type_miles">Miles Card </string>
    <string name="card_type_escape">Escape Card </string>
    <string name="card_type_essential">Essential Card </string>
    <string name="card_type_essential_with_fee">Essential With Fee Card </string>
    <string name="card_type_corp">Corp Card </string>
    <string name="card_type_dbc">DBC Card </string>
    <string name="card_type_dbc_miles">DBC Miles Card </string>
    <string name="account_card_ending_in">Ending in </string>
	 <string name="register_btn">Register Now</string>
	 
	 <!-- WHAT'S NEW -->
    <string name="whats_new_sharedpref">WHATS_NEW_PREF</string>
    <string name="appVer">appVer</string>
    <string name="register_btn">Register Now</string>
     <!-- Quick information -->
    <string name="quick_view_info">Turn on to view your current balance, credit line available and <i>Cashback Bonus</i> balance without having to log in. </string>
    <string name="quick_view_info_miles">Turn on to view your current balance, credit line available and Miles balance without having to log in. </string>
    <string name="quick_view_info_dbc_corp">Turn on to view your current balance, credit line available without having to log in. </string>
    <string name="quick_view_info_on">On the login screen tap the Quick view button, or swipe to see your account information.</string>
    <string name="quick_view_faq">Quick view FAQ</string>
    <string name="quick_view_detail">Another account has their settings enabled to view their account information without logging in on this device. Would you like to disable the settings for that account and enable them for this account?</string>
    <string name="no_thank">No Thanks</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unlock_account">Unlock Account</string>
    <string name="call_now">Call Now</string>
    <string name="phone_customer_service_locked">1-877-742-7822</string>
</resources>
